hash_mod_src = files(
  'hash_algs.c',
  'sm3.c',
  'streebog.c',
  'ripemd160.c',
  'belt-hash.c',
  'hmac.c',
  'bash224.c',
  'bash224.h',
  'bash256.c',
  'bash256.h',
  'bash384.c',
  'bash384.h',
  'bash512.c',
  'bash512.h',
  'bash.c',
  'bash.h',
  'sha224.c',
  'sha224.h',
  'sha256.c',
  'sha256.h',
  'sha2.h',
  'sha3-224.c',
  'sha3-224.h',
  'sha3-256.c',
  'sha3-256.h',
  'sha3-384.c',
  'sha3-384.h',
  'sha3-512.c',
  'sha3-512.h',
  'sha384.c',
  'sha384.h',
  'sha3.c',
  'sha3.h',
  'sha512-224.c',
  'sha512-224.h',
  'sha512-256.c',
  'sha512-256.h',
  'sha512.c',
  'sha512_core.c',
  'sha512_core.h',
  'sha512.h',
  'shake256.c',
  'shake256.h',
  'shake.c',
  'shake.h',
)
